# cookiecutter-project

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .flake8  .isort.cfg  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/notebooks/: main.ipynb
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_version.py
