[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.authors }}"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = {extras = ["jupyter"], version = "^23.1.0"}
isort = "^5.12.0"
flake8 = "^6.0.0"
watermark = "^2.3.1"

[tool.black]
line-length = {{ cookiecutter.max_line_length }}
